--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,18 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: SonarQubePrepare@5
+  inputs:
+    SonarQube: 'sonarqube-conn-bb'
+    scannerMode: 'MSBuild'
+    projectKey: 'dotNetAppbb'
+    projectName: 'dotNetAppbb'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
+- task: SonarQubeAnalyze@5
+  inputs:
+    jdkversion: 'JAVA_HOME_11_X64'
+- task: SonarQubePublish@5
+  inputs:
+    pollingTimeoutSec: '300'
