--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,3 +19,6 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
